[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hablo"
version = "0.0.1"
authors = [
  { name="Marco Weber", email="marco.weber@gmail.com" },
]
description = "Package to orchestrate lm-based chat flows"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyyaml"
    "Jinja2"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/qxsch/hablo"
Issues = "https://github.com/qxsch/hablo/issues"
